--- a/P2_JOURDAIN.html
+++ b/P2_JOURDAIN.html
@@ -44,14 +44,12 @@
 
         <!--barre de recherche Header-->
         <form class="barre_recherche" method="post" action="....">
-            <div class="display_researsch">
                 <button class="button_researsch_left">
                     <i class="fas fa-map-marker-alt"></i>
                 </button>
                 <input class="input_researsch" type="text" id="recherche" name="recherche"
                     placeholder="Marseille,France" />
                 <button class="button_researsch_right">rechercher</button>
-            </div>
         </form>
         <ul class="display_filtre">
             <li class="spacing_filter">filtres</li>
@@ -87,11 +85,26 @@
     </section>
     <!--article hotel hebergement à Marseille -->
     <main>
-        <h2 class="titre_hebergement">Hebergement à Marseille</h2>
         <div class="position_hebergement">
             <div class="section_hebergements">
+                <h2 class="titre_hebergement">Hebergement à Marseille</h2>
                 <div class="hotel_cannebiére">
-                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    <div class="img_container">
+                        <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    </div>
+                    <div class="text_cannebiére">
+                        <h3>Auberge de la cannebiére</h3>
+                        <p>nuit à partir de <b>25 $</b></p>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i id="change_color_star" class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="hotel_cannebiére">
+                    <img class="img_cannebiére" src="./hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                         alt="image auberge la cannebiére" />
                     <div class="text_cannebiére">
                         <h3>Auberge de la cannebiére</h3>
@@ -104,7 +117,7 @@
                     </div>
                 </div>
                 <div class="hotel_cannebiére">
-                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    <img class="img_cannebiére" src="./hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                         alt="image auberge la cannebiére" />
                     <div class="text_cannebiére">
                         <h3>Auberge de la cannebiére</h3>
@@ -117,7 +130,7 @@
                     </div>
                 </div>
                 <div class="hotel_cannebiére">
-                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    <img class="img_cannebiére" src="./hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                         alt="image auberge la cannebiére" />
                     <div class="text_cannebiére">
                         <h3>Auberge de la cannebiére</h3>
@@ -130,7 +143,7 @@
                     </div>
                 </div>
                 <div class="hotel_cannebiére">
-                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    <img class="img_cannebiére" src="./hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                         alt="image auberge la cannebiére" />
                     <div class="text_cannebiére">
                         <h3>Auberge de la cannebiére</h3>
@@ -143,8 +156,10 @@
                     </div>
                 </div>
                 <div class="hotel_cannebiére">
-                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                    <div class="img_container">
+                        <img class="img_cannebiére" src="./hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                         alt="image auberge la cannebiére" />
+                    </div>
                     <div class="text_cannebiére">
                         <h3>Auberge de la cannebiére</h3>
                         <p>nuit à partir de <b>25 $</b></p>
@@ -155,19 +170,7 @@
                         <i class="far fa-star"></i>
                     </div>
                 </div>
-                <div class="hotel_cannebiére">
-                    <img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
-                        alt="image auberge la cannebiére" />
-                    <div class="text_cannebiére">
-                        <h3>Auberge de la cannebiére</h3>
-                        <p>nuit à partir de <b>25 $</b></p>
-                        <i id="change_color_star" class="fas fa-star"></i>
-                        <i id="change_color_star" class="fas fa-star"></i>
-                        <i id="change_color_star" class="fas fa-star"></i>
-                        <i id="change_color_star" class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                </div>
+                <p>Afficher plus</p>
 
             </div>
             <!-- article les plus populare -->
@@ -178,8 +181,26 @@
                 </div>
 
                 <div class="hotel_populaires">
-                    <img class="img_soleil_du_matin"
-                        src="./hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                    <div class="img_container">
+                        <img class="img_soleil_du_matin"
+                        src="./hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                        alt="image auberge la cannebiére" />
+                    </div>
+                    <div class="text_soleil_du_matin">
+                        <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
+                        <p>nuit à partir de <b>128 $</b></p>
+                        <div class="star_position_soleil_du_matin">
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i id="change_color_star" class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="hotel_populaires">
+                    <img class="img_soleil_du_matin" src="./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
                         alt="image auberge la cannebiére" />
                     <div class="text_soleil_du_matin">
                         <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
@@ -195,26 +216,8 @@
 
                 </div>
                 <div class="hotel_populaires">
-                    <img class="img_soleil_du_matin"
-                        src="./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
-                        alt="image auberge la cannebiére" />
-                    <div class="text_soleil_du_matin">
-                        <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
-                        <p>nuit à partir de <b>128 $</b></p>
-                        <div class="star_position_soleil_du_matin">
-                            <i id="change_color_star" class="fas fa-star"></i>
-                            <i id="change_color_star" class="fas fa-star"></i>
-                            <i id="change_color_star" class="fas fa-star"></i>
-                            <i id="change_color_star" class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="hotel_populaires">
-                    <img class="img_soleil_du_matin"
-                        src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
-                        alt="image auberge la cannebiére" />
+                    <img class="img_soleil_du_matin" src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                        alt=" image auberge la cannebiére" />
                     <div class="text_soleil_du_matin">
                         <h3 class="titre_soleil_du_matin">Hotel le soleil du matin</h3>
                         <p>nuit à partir de <b>128 $</b></p>
