--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 				<!--add links-->
 
 				<li class="hebergement_order change_color">
-					<a class="change_hypertext" href="#Hebergements"> Hebergements</a>
+					<a class="change_hypertext" href="#hebergements"> Hebergements</a>
 				</li>
 				<li class="activités_order">
-					<a class="change_hypertext1" href="#">Activités</a>
+					<a class="change_hypertext1" href="#activités">Activités</a>
 				</li>
 				<li class="inscrire_order  change_color">
 					<a class="change_hypertext" href="">S'inscrire</a>
@@ -99,13 +99,13 @@
 			</div>
 		</section>
 		<!--article hotel hebergement à Marseille -->
-		<div class="position_hebergement">
+		<div id="hebergements" class="position_hebergement">
 			<section class="section_hebergements">
 				<h2 class="titre_hebergement">Hebergement à Marseille</h2>
 				<div class="hotel_cannebiére">
 					<div class="img_container">
-						<img class="img_cannebiére" 
-									 src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="image auberge la cannebiére" />
+						<img class="img_cannebiére" src="./hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_cannebiére">
 						<h3>Auberge de la cannebiére</h3>
@@ -139,7 +139,7 @@
 					</div>
 					<div class="text_cannebiére">
 						<h3>Hôtel les mouettes</h3>
-						<p>nuit à partir de <b>25 €</b></p>
+						<p>nuit à partir de <b>76 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -169,7 +169,7 @@
 					</div>
 					<div class="text_cannebiére">
 						<h3>Auberge le panier</h3>
-						<p>nuit à partir de <b>25 €</b></p>
+						<p>nuit à partir de <b>23 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -185,7 +185,7 @@
 					</div>
 					<div class="text_cannebiére">
 						<h3>Hôtel chez Amina</h3>
-						<p>nuit à partir de <b>25 €</b></p>
+						<p>nuit à partir de <b>96 €</b></p>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
 						<i id="change_color_star" class="fas fa-star"></i>
@@ -205,7 +205,7 @@
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
 						<img class="img_soleil_du_matin"
-							src="./hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+							src="./hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
 							alt="image auberge la cannebiére" />
 					</div>
 
@@ -223,8 +223,7 @@
 				</div>
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
-						<img class="img_eau"
-							src="./hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg"
+						<img class="img_eau" src="./hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
 							alt="image auberge la cannebiére" />
 					</div>
 					<div class="text_soleil_du_matin">
@@ -241,13 +240,12 @@
 				</div>
 				<div class="hotel_populaires">
 					<div class="img_container_populaire">
-						<img class="img_blanc"
-							src="./hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+						<img class="img_blanc" src="./hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
 							alt=" image auberge la cannebiére" />
 					</div>
 					<div class="text_soleil_du_matin">
 						<h3 class="titre_soleil_du_matin">Hôtel Tout bleu et Blanc</h3>
-						<p>nuit à partir de <b>128 €</b></p>
+						<p>nuit à partir de <b>68 €</b></p>
 						<div class="star_position_soleil_du_matin">
 							<i id="change_color_star" class="fas fa-star"></i>
 							<i id="change_color_star" class="fas fa-star"></i>
@@ -259,10 +257,10 @@
 				</div>
 
 			</section>
-			<!-- position grande activité -->
+			<!-- position grande activités -->
 		</div>
 		<section>
-			<h2 class="titre_hebergement_activité">Activité à Marseille</h2>
+			<h2 id="activités" class="titre_hebergement_activité">Activités à Marseille</h2>
 
 			<div class="global_position_activity">
 				<div class="column">
@@ -311,7 +309,7 @@
 					<div class="container_text_image_activity">
 						<div class="img_container_activity">
 							<img class="small_image size_image"
-								src="activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" />
+								src="activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" />
 						</div>
 						<div class="text_activity">
 							<b>Notre-dame-de-la-garde</b>
@@ -320,7 +318,7 @@
 					<div class="container_text_image_activity">
 						<div class="img_container_activity">
 							<img class="midle_image size_image"
-								src="activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" />
+								src="activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="" />
 						</div>
 						<div class="text_activity">
 							<b>Parc longchamp</b>
@@ -340,7 +338,7 @@
 				<ul>
 					<li><a class="Hypertext_footer" href="">Fonctionement du site</a></li>
 					<li><a class="Hypertext_footer" href="">Condition générales de vente</a></li>
-					<li><a class="Hypertext_footer"href="">Données et confidentialité</a></li>
+					<li><a class="Hypertext_footer" href="">Données et confidentialité</a></li>
 				</ul>
 			</div>
 			<div class="footer_text">
@@ -349,7 +347,7 @@
 				</div>
 				<ul>
 					<li><a class="Hypertext_footer" href="">Charte qualité</a></li>
-					<li><a class="Hypertext_footer"href="">Soumetttre votre hotel</a></li>
+					<li><a class="Hypertext_footer" href="">Soumetttre votre hotel</a></li>
 				</ul>
 			</div>
 			<div class="footer_text">
